Java/E-montazysta/.build/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    app: backend
