Java/E-montazysta/.build/ingressroute_dev.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`dev.emontazysta.pl`) && PathPrefix(`/api/v1`, `/swagger-ui`, `/v3/api-docs`)
    middlewares:
    - name: backend-add-index-swagger
      namespace: development
    priority: 2
    services:
    - kind: Service
      name: backend
      namespace: development
      port: 80
